--- a/TestGradient/Base.lproj/Main.storyboard
+++ b/TestGradient/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAP-J9-juQ" customClass="RadialGradientView" customModule="TestGradient" customModuleProvider="target">
                                 <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="ftG-JV-2qX"/>
                                     <constraint firstAttribute="height" constant="128" id="lKC-u7-eWF"/>
